src/test/deca/context/valid/created/exp_bin/op_arith/modulo.deca
// Description :
//    test du modulo
//
// Resultats :
//		Ok

{
int a;
a = 1 % 2;
a = 3 % a; 
a = a % a ; 
a = a % 6 ;
}